2002-12-02 M Pollard <circlemaster@blueyonder.co.uk>
	* configure.ac/in: resync'd .in bumped required eris version to 0.9.7
	  due to API changes.

	* states.xml: Updated this

	* GuiService.cpp/h: More work on panels.

2002-12-01 Aglanor
	* configure.ac: added ogre components dir

	* src/components/orge: initial commit of ORGE stuff
	
2002-11-27 M Pollard <circlemaster@blueyonder.co.uk>
	* Dime.cpp: Reintroduce the hitting of escape.

	* StateManager.cpp/h: Got this going so that our label widgets are
	  now XML based.

	* states.xml: Added the Label Widget and several states.

	* GuiService.cpp/h: Added beginnings of Panel support, complete Label
	  support in.

2002-11-17 M Pollard <circlemaster@blueyonder.co.uk>
	* MetaserverService.cpp: Reformated, adapted for Ron's change to the
	  signal

	* StateManager.cpp: tidy up.

	* GuiService.cpp/h Widget.h: Altered for new factory idea.

2002-11-13 M Pollard <circlemaster@blueyonder.co.uk>
	* StateManager.cpp: Fixed the bug where widgets were going out of
	  scope, thus causing them not to be drawn.

	* StateManager.cpp: Fixed up findState so that it works

	* states.xml: added stateinfo for findState to find.

2002-11-12 M Pollard <circlemaster@blueyonder.co.uk>
	* configure.in: added to allow older distros to build

	* configure.ac: modified to workaround bug in libxml's AM_PATH (not
	  setting CPPFLAGS when checking only CFLAGS)

	* MetaserverService.cpp/h, Application.cpp/h: Removed DataModel, it's
	  buggy.

	* Dime.cpp Applicatition.cpp/h StateManager.cpp:
	  Moved Widget loading into StateManager.  Fixed a circular calling bug.

2002-11-12 M Pollard <circlemaster@blueyonder.co.uk>
        * configure.ac: modernised the syntax

2002-11-11 M Pollard <circlemaster@blueyonder.co.uk>
	* StateManager.cpp, StateManager.h: Begun work on new format here.

	* StateManagerTest.cpp: Fixed this up so that it should work now,
	  however I haven't readded it to the build as I want to complete
	  StateManager first.
	